[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dialogic/Nodes/ChoiceButton.gd" type="Script" id=1]

[node name="ChoiceButton" type="Button"]
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Testing button "
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextTimer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_ChoiceButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ChoiceButton_mouse_exited"]
[connection signal="timeout" from="NextTimer" to="." method="_on_NextTimer_timeout"]
